[tool.poetry]
name = "steamstatus"
version = "0.1.0"
description = ""
authors = ["Edcarlos <Edcarlos.molequedoido@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "*"
pytest-mock = "*"
selenium = "*"

[tool.pytest.ini_options]
addopts = "-ra -vvv"
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
